# Loan-default-model-drift-monitoring

./: .env.example  .gitignore  README.md  docker-compose.production.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  run_tests.ps1  run_tests.sh
.github/workflows/: ci.yml
src/: config.py  logging_config.py
src/api_layer/: .dockerignore  Dockerfile  main.py  schemas.py
src/jobs/: data_stats.py  drift_check.py  features.py  register.py  train.py  validate.py
test_data/: test_data.csv  train_data.csv
tests/: README.md  conftest.py  test_data_stats.py  test_drift_check.py  test_mlflow_integration.py
